modules/gdscript/tests/scripts/parser/errors/nullable_qualifier_forbidden_for_constants.gd
func test():
    const CONSTANT: String? = null # Should error
